# tsplab

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.md  feature_request.yml  question.md
.github/workflows/: ci.yml  repo-visualizer.yml
examples/: quick_start.py
tests/: test_audit.py  test_baselines.py  test_monitor.py
tsplab/: __init__.py
tsplab/audit/: __init__.py  covariate_check.py  fold_check.py  leakage.py  report.py  rmse_gain.py
tsplab/baselines/: __init__.py  compare.py  linear.py  naive.py  tree.py
tsplab/data/: __init__.py  splitter.py
tsplab/eval/: __init__.py  difficulty.py  metrics.py
tsplab/experiment/: __init__.py  tracker.py
tsplab/monitor/: __init__.py  curve.py  gradient_probe.py  lr_finder.py
tsplab/tune/: __init__.py  tuner.py
tsplab/viz/: __init__.py  prediction.py  residual.py  training.py
