[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tsplab"
version = "0.1.0"
description = "Time Series Prediction Lab - audit, monitor, tune, and compare your forecasting experiments"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "TSPLab Contributors"},
]
keywords = ["time-series", "forecasting", "machine-learning", "deep-learning", "experiment-management"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "matplotlib>=3.7",
    "scipy>=1.10",
    "scikit-learn>=1.3",
    "statsmodels>=0.14",
]

[project.optional-dependencies]
tune = ["optuna>=3.5"]
viz = ["plotly>=5.15"]
tree = ["xgboost>=2.0"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "optuna>=3.5",
    "plotly>=5.15",
    "xgboost>=2.0",
]

[project.urls]
Repository = "https://github.com/disdorqin/tsplab"
Issues = "https://github.com/disdorqin/tsplab/issues"
PyPI = "https://pypi.org/project/tsplab/"

[tool.setuptools.packages.find]
include = ["tsplab*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::FutureWarning",
]

[tool.coverage.run]
source = ["tsplab"]
omit = [
    "*/tests/*",
    "*/examples/*",
    "tsplab/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
